# hyperion

./: .gitignore  .gitmodules  .readthedocs.yaml  .run_docker_tests.sh  .travis.yml  CHANGES.md  CHANGES.rst  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile.in  README.md  README.rst  TODO  changes.md  circle.yml  configure  configure.ac  parse_templates.py  precompute_dust.py  precompute_pah.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: main.yml
cmake_modules/: FindHDF5.cmake
doc/: dust_files.tex  maximum_i.tex  midplane.tex  rmin.tex  rmin_lstar.tex  uabs.tex
docs/: changes.rst  conf.py  contributing.rst  disclaimers.rst  index.rst  model_setup.rst  rtd-pip-requirements
docs/advanced/: advanced.rst  advanced_conf.rst  dust_file.rst  filter_convolution.rst  forced_interaction.rst  indepth_amr.rst  indepth_oct.rst  logger.rst  model_file.rst  moving_sources_and_dust.rst  peeloff.rst  reducing_file_sizes.rst  scaling_isrf.rst  setup_example_isrf.py  use_grid_from_disk.rst  use_previous.rst  voronoi_sampling.rst
docs/api/: api.rst  get_image.rst  get_physical_grid.rst  get_sed.rst  hyperion.conf.BinnedImageConf.rst  hyperion.conf.PeeledImageConf.rst  hyperion.densities.AlphaDisk.rst  hyperion.densities.AmbientMedium.rst  hyperion.densities.BipolarCavity.rst  hyperion.densities.FlaredDisk.rst  hyperion.densities.PowerLawEnvelope.rst  hyperion.densities.UlrichEnvelope.rst  hyperion.dust.BHDust.rst  hyperion.dust.HOCHUNKDust.rst  hyperion.dust.HenyeyGreensteinDust.rst  hyperion.dust.IsotropicDust.rst  hyperion.dust.SphericalDust.rst  hyperion.grid.AMRGrid.rst  hyperion.grid.CartesianGrid.rst  hyperion.grid.CylindricalPolarGrid.rst  hyperion.grid.OctreeGrid.rst  hyperion.grid.SphericalPolarGrid.rst  hyperion.grid.VoronoiGrid.rst  hyperion.model.AnalyticalYSOModel.rst  hyperion.model.Image.rst  hyperion.model.Model.rst  hyperion.model.ModelOutput.rst  hyperion.model.SED.rst  hyperion.model.helpers.rst  hyperion.sources.ExternalBoxSource.rst  hyperion.sources.ExternalSphericalSource.rst  hyperion.sources.MapSource.rst  hyperion.sources.PlaneParallelSource.rst  hyperion.sources.PointSource.rst  hyperion.sources.PointSourceCollection.rst  hyperion.sources.Source.rst  hyperion.sources.SphericalSource.rst  hyperion.surfaces.SphericalSurface.rst  hyperion.surfaces.SurfaceScatteringProperties.rst  hyperion.util.constants.rst
docs/dust/: bhmie.rst  d03.rst  dust.rst  index.rst  kmh.rst  kmh_hg.rst
docs/important/: important.rst
docs/installation/: cmake_build_system.rst  fortran_dependencies.rst  install_centos_scilinux.rst  install_debian_ubuntu.rst  install_fedora.rst  install_freebsd.rst  install_full.rst  install_linux_nonroot.rst  install_macosx.rst  installation.rst  linux_package_managers.rst  python_dependencies.rst  python_non_root.rst  specific_systems.rst
docs/postprocessing/: extracting_observables.rst  extracting_quantities.rst  postprocessing.rst
docs/running/: running.rst
docs/setup/: analytical_yso_model.rst  conf_images.rst  conf_physics.rst  model.rst  model_setup.rst  photon_numbers.rst  setup.rst  setup_conf.rst  setup_dust.rst  setup_grid.rst  setup_images.rst  setup_sources.rst  setup_surfaces.rst  setup_yso.rst
docs/tutorials/: example_class1.rst  example_pure_scattering.rst  howto_pure_scattering.rst  howto_scaling_isrf.rst  index.rst  python_matplotlib.rst  python_writing.rst  tutorial_animations.rst  tutorial_images.rst  tutorial_model.rst  tutorial_plotting.rst  tutorial_quantities.rst  tutorial_quantities_yt.rst  tutorial_seds.rst  tutorial_writing.rst
documentation/: Makefile  conf.py  indepth_amr.rst  index.rst  model.rst  model_run.rst
documentation/advanced/: reducing_file_sizes.rst
documentation/api/: get_sed.rst
documentation/source/: analytical_yso_model.rst  conf.py  conf_images.rst  dust_file.rst  fortran_dependencies.rst  howto_animations.rst  indepth_amr.rst  index.rst  installation.rst  model.rst  model_input.rst  model_postprocess.rst  model_setup.rst  python.rst  python_dependencies.rst  python_intro.rst  python_non_root.rst  specific_systems.rst  tutorial_plotting.rst  tutorial_writing.rst  tutorials.rst
documentation/tutorials/: tutorial_plotting.rst  tutorial_writing.rst
dustfiles/: kmh.par  kmh_ice090.par  kmh_ice095.par  kmh_no200.par  kmh_no200_rescale.par  kmh_tom.par  r400_ice095_extrap.par  r400_ice095_no200.par  r400_ice095_no200_rescale.par  r400_ice095_tom.par  ww04.par  www002.par  www003_extrap.par  www003_no200.par  www003_no200_rescale.par  www003_tom.par  www005.par  www006.par  www006_extrap.par
hyperion/: __init__.py  conftest.py  version.py
hyperion/atmos/: __init__.py  prepare_atmos.py
hyperion/conf/: __init__.py  conf_files.py
hyperion/densities/: __init__.py  alpha_disk.py  ambient_medium.py  bipolar_cavity.py  core.py  envelope.py  flared_disk.py  power_law_envelope.py  ulrich_envelope.py
hyperion/dust/: __init__.py  dust_type.py  emissivities.py  mean_opacities.py  optical_properties.py  prepare_emiss.py
hyperion/filter/: filter.py
hyperion/filters/: __init__.py  filters.py
hyperion/grid/: __init__.py  _voronoi_core.c  amr_grid.py  cartesian_grid.py  cylindrical_polar_grid.py  grid_helpers.py  grid_on_disk.py  octree_grid.py  spherical_polar_grid.py  voronoi_grid.py  voronoi_helpers.py  voropp_wrap.cc  yt2_wrappers.py  yt3_wrappers.py  yt_wrappers.py
hyperion/importers/: __init__.py  _discretize_sph.c  orion.py  sph.py
hyperion/model/: __init__.py  analytical_yso_model.py  helpers.py  image.py  model.py  model_output.py  sed.py  ttsre_model.py
hyperion/sources/: __init__.py  mixins.py  source.py
hyperion/surfaces/: __init__.py  surface_properties.py  surface_scattering_properties.py  surfaces.py
hyperion/testing/: coveragerc  helper.py  pytest_plugin.py
scripts/: hyperion  hyperion2fits  mctherm2hyperion  ttsre2rtin  ttsre2rtin_auto
tests/: test_analytical_yso.py  test_densities.py  test_dimensions.py  test_grid.py  test_helpers.py  test_image.py  test_model_write.py  test_output_physical.py  test_sed.py  test_source.py
(+335 files in other folders)
