[metadata]
name = Hyperion
url = http://www.hyperion-rt.org
author = Thomas Robitaille
author_email = thomas.robitaille@gmail.com
license = BSD
description = Monte-Carlo Radiative Transfer Code

[options]
zip_safe = True
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.11
    matplotlib>=1.5
    astropy>=1.2
    h5py>=2.4
    yt>=3.2
    decorator

[options.extras_require]
docs =
    sphinx
    numpydoc
test =
    pytest

[options.package_data]
hyperion.model.tests = data/*.rtout, data/*.hdf5
hyperion.importers.tests = data/*.hdf5
hyperion.grid.tests = data/*.hdf5, data/DD0010/*
hyperion.testing = coveragerc

[options.entry_points]
pytest11 =
    hyperion = hyperion.testing.pytest_plugin

[bdist_wheel]
py_limited_api = cp39
